--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body, html {
 
 #map {
     width: 100%;
-    height: 100vh;
+    height: 60px;
     border-bottom: 2px solid var(--primary-color);
     background-color: #e0e0e0;
 }
