--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,8 @@ body, html {
 }
 
 #map {
-    width: 100%;
-    height: 60px;
+    width: 200%;
+    height: 200vh;
     border-bottom: 2px solid var(--primary-color);
     background-color: #e0e0e0;
 }
